todo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP # Change this from NodePort
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
